syntax = "proto3";
package opennms.azure.api;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.azure.api";


message AzureScanResponse {
  repeated AzureScanItem results = 2;
}

message AzureScanItem {
  string id = 1;
  string name = 2;
  string resourceGroup = 3;
  int64 credential_id = 4;
}
